--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0"
   },
   "scripts": {
     "start": "react-scripts start",
