--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.2",
+    "sass": "^1.32.7",
+    "scss": "^0.2.4",
     "slate": "^0.59.0",
     "slate-react": "^0.59.0"
   },
