--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emotion": "^11.0.0",
+    "escape-html": "^1.0.3",
     "is-hotkey": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
